<resources>
    <string name="app_name">Shake On It</string>

    <string name="hamburger_button">Menu</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewDealDetailFragmentTitle">Deal Details</string>
    <string name="deal_list_name">Deals</string>

    <string name="new_deal_title">New Deal Title</string>
    <string name="new_deal_text">Enter a description here</string>
    <string name="new_deal_location">Where is this happening?</string>
    <string name="new_deal_participants">Who is this with? (ex: "davidX95, eliB53")</string>
    <string name="new_deal_terms">What are the terms of this deal?</string>

    <string name="submit_new_deal">submit</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Deal View Screen strings -->
    <string name="accept_deal">Accept Deal</string>
    <string name="reject_deal">Reject Deal</string>
    <string name="deal_complete">Deal Complete</string>
    <string name="deal_incomplete">Deal Incomplete</string>

    <!-- List_view strings -->
    <string name="list_item_deal_title">Deal Title</string>
    <string name="list_item_deal_description">Deal Description</string>
    <string name="list_item_deal_date_created">Date Created</string>

    <!-- Strings related to login -->
    <string name="create_account_text"><u>create account</u></string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (required)</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="error_user_not_found">User not found. Try again, or login.</string>
    <string name="error_password_doesnt_match">Password doesn\'t match. Please try again.</string>
    <string name="error_passwords_dont_match">The two passwords entered do not match.</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="prompt_confirm_password">Confirm Password</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>


    <!-- Accessibility image description Strings -->
    <string name="deal_accepted_image_content_description">Blue check mark indicating all participants have excepted the deal,
        but it has not been completed yet.</string>
    <string name="deal_rejected_image_content_description">Red \'X\' indicating some participant rejected the deal
        or some participant said the deal went incomplete.</string>
    <string name="deal_completed_image_content_description">Green check mark indicating all participants
        have marked the deal as completed.</string>

</resources>
